--- a/admin/package.json
+++ b/admin/package.json
@@ -68,6 +68,7 @@
     "source-map-explorer": "^2.5.2",
     "tailwind-safelist-generator": "^0.1.2",
     "twin.macro": "^3.0.0-rc.1",
+    "use-debounce": "^7.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.10"
   },
