--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "use-debounce": "^10.0.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
